2003-10-28  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_24_stats.c:
	* daemon/liblegacy/opd_24_stats.h:
	* daemon/liblegacy/opd_image.c:
	* daemon/liblegacy/opd_image.h:
	* daemon/liblegacy/opd_kernel.c:
	* daemon/liblegacy/opd_kernel.h:
	* daemon/liblegacy/opd_mapping.c:
	* daemon/liblegacy/opd_mapping.h:
	* daemon/liblegacy/opd_parse_proc.c:
	* daemon/liblegacy/opd_parse_proc.h:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_proc.h:
	* daemon/liblegacy/opd_sample_files.c:
	* daemon/liblegacy/opd_sample_files.h: move doygen comment from *.c to
	  *.h. Add some doxygen comment.

2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>

	* daemon/liblegacy/opd_24_stats.c:
	* daemon/liblegacy/opd_image.h:
	* daemon/liblegacy/opd_image.h: nr_images static

2003-10-27  John Levon  <levon@movementarian.org>

	* doc/opcontrol.1.in: document --image=

	* doc/oprofile.xml:
	* utils/opcontrol: make user specify "--image=all"
	to reset. Clean up help message. Ensure note table
	size is given a value. Add '-t' for '--stop', and
	'-i' for '--image'.

2003-10-27  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: document opcontrol --image=

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/opd_events.h:
	* daemon/opd_events.c: move code for handling
	event descriptions here, and share find_counter_event(),
	plus fill_header()

	* daemon/opd_mangling.c:
	* daemon/opd_perfmon.c:
	* daemon/oprofiled.c:
	* daemon/oprofiled.h:
	* daemon/liblegacy/opd_proc.c:
	* daemon/liblegacy/opd_sample_files.c: changes from
	above

2003-10-27  John Levon  <levon@movementarian.org>

	* daemon/oprofiled.c: fix help text

	* daemon/liblegacy/init.c:
	* daemon/liblegacy/opd_proc.h:
	* daemon/liblegacy/opd_proc.c: clean up headers
	a bit

2003-10-27  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.cpp: check we can get kernel interface

2003-10-27  John Levon  <levon@movementarian.org>
