@@ -84,11 +84,12 @@ respectively.
 .br
 .TP
 .BI "--separate="[none,library,kernel,thread,cpu,all]
-Separate samples based on the given separator. 'library' per-application
-dynamically linked libraries samples files. 'kernel' per-application modules
-and kernel samples files, 'kernel' imply 'library'. 'thread' gives separation
-for each thread and task. 'cpu' separates for each CPU. 'all' imply all the
-above options and 'none' turns off separation.
+Separate samples based on the given separator. 'library' separates
+dynamically linked library samples per application. 'kernel' separates
+kernel and kernel module samples per application; 'kernel'
+implies 'library'. 'thread' gives separation for each thread and
+task.  'cpu' separates for each CPU. 'all' implies all of the above
+options and 'none' turns off separation.
 .br
 .TP
 .BI "--image="[name,name...|"all"]
